--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,13 @@ name = "hakoniwa-pdu"
 version = "0.1.0"
 description = "Hakoniwa PDU communication library for Python"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = {text = "MIT"}
 authors = [
   {name = "Takashi Mori", email = "tmori@hakoniwa-lab.net"}
 ]
 dependencies = [
-    "websockets>=11.0"
+  "websockets>=11.0"
 ]
-
 
 [project.urls]
 Homepage = "https://github.com/hakoniwalab"
