--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "hakoniwa-pdu"
 version = "0.1.0"
 description = "Hakoniwa PDU communication library for Python"
 readme = "README.md"
-license = {text = "MIT"}
+license = {file = "LICENSE"}
 authors = [
   {name = "Takashi Mori", email = "tmori@hakoniwa-lab.net"}
 ]
