--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "hakoniwa-pdu"
-version = "0.9.0"
+version = "1.0.0"
 description = "Hakoniwa PDU communication library for Python"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -8,8 +8,12 @@ authors = [
   {name = "Takashi Mori", email = "tmori@hakoniwa-lab.net"}
 ]
 dependencies = [
-  "websockets>=11.0"
+  "websockets>=11.0",
+  "jsonschema>=4.23.0",
+  "pydantic>=2.7.0"
 ]
+[tool.setuptools.package-data]
+"hakoniwa_pdu.apps.launcher" = ["schemas/**/*.json"]
 
 [project.urls]
 Homepage = "https://github.com/hakoniwalab"
@@ -24,3 +28,9 @@ test = [
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
