--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "hakoniwa-pdu"
-version = "1.0.0"
+version = "1.0.5"
 description = "Hakoniwa PDU communication library for Python"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -10,7 +10,8 @@ authors = [
 dependencies = [
   "websockets>=11.0",
   "jsonschema>=4.23.0",
-  "pydantic>=2.7.0"
+  "pydantic>=2.7.0",
+  "mcp"
 ]
 [tool.setuptools.package-data]
 "hakoniwa_pdu.apps.launcher" = ["schemas/**/*.json"]
